src/mars/phobos/parse/parse.c
#include "orbit.h"
#include "term.h"

#include "parse.h"

// kayla's FREEZINGLY 🧊🧊 SLOW 🐌🐌 parser in ALGOL69 👴👴 + KITTY POWERED with KIBBLE 5.0 🐈🐈 and DOGECOIN WEB4 TECHNOLOGY
// predictive LL(1) parser using the ebnf spec

/*
    README FOR THOSE WANTING TO MODIFY THIS:
    functions of the form parse_***(parser* p) will advance the token stream for you
    if you have any questions, please contact kaylatheegg on discord or leave a github
    issue and i'll give you alternative contact info if you do not have discord.
 */


// construct a parser struct from a lexer and an arena allocator
parser make_parser(lexer* l, arena* alloca) {
    parser p = {0};
    p.alloca = alloca;
    p.tokens = l->buffer;
    p.path   = l->path;
    p.src    = l->src;
    p.current_tok = 0;
    p.num_nodes = 0;
    return p;
}

void parse_file(parser* p) {
    //<program> ::= <module_stmt> <import_stmt>* <stmts>
    p->module_decl = parse_module_decl(p);

    general_warning("NOTE: this compiler is susceptible to just. falling into infinite loops");
    general_warning("      this is because it fails to match, and cannot figure out how to  ");
    general_warning("      escape safely. please report any you find!\n");
    
    general_warning("CURRENTLY KNOWN INFINITE LOOPS:");
    general_warning("please expand this list");

    da_init(&p->stmts, 1);

    while (current_token(p).type == TOK_KEYWORD_IMPORT) da_append(&p->stmts, parse_import_decl(p));

    while (current_token(p).type != TOK_EOF) {
        da_append(&p->stmts, parse_stmt(p));
        
        //general_error("Encountered unexpected token type %s", token_type_str[current_token(p).type]);
    }
}

AST parse_stmt(parser* p) {
    /*<stmt> ::= <decl> | <return> | <if> | <else> | <while> | 
           <for_type_one> | <for_type_two> | <asm> | <stmt_block> |
           <switch> | <break> | <fallthrough> | <expression> ";" | <extern> | <defer> | <continue> | ";"
            <assignment> | */
    AST n;

    switch (current_token(p).type) {
        //<decl>
        case TOK_KEYWORD_LET:
        case TOK_KEYWORD_MUT:
            return parse_decl_stmt(p);
        //<return> ::= "return" (<expression>* ",") <expression> ";"
        case TOK_KEYWORD_RETURN:
            n = new_ast_node(p, AST_return_stmt);
            n.as_return_stmt->base.start = &current_token(p);
            advance_token(p);
            da_init(&n.as_return_stmt->returns, 1);
            while (current_token(p).type != TOK_SEMICOLON) {
                da_append(&n.as_return_stmt->returns, parse_expr(p));
                if (current_token(p).type == TOK_SEMICOLON) break;
                if (current_token(p).type != TOK_COMMA) error_at_parser(p, "expected ,");
                advance_token(p);
            }
            n.as_return_stmt->base.end = &current_token(p);
            advance_token(p);
            return n;
        //<if> ::= "if" <expression> <control_flow_block>
        case TOK_KEYWORD_IF:
            n = new_ast_node(p, AST_if_stmt);
            n.as_if_stmt->base.start = &current_token(p);
            advance_token(p);
            n.as_if_stmt->condition = parse_expr(p);

            n.as_if_stmt->if_branch = parse_cfs(p);
            return n;
        //<else> ::= "else" (<if> | <stmt_block>)
        case TOK_KEYWORD_ELSE:
            n = new_ast_node(p, AST_else_stmt);
            n.as_else_stmt->base.start = &current_token(p);
            advance_token(p);
            if (current_token(p).type == TOK_KEYWORD_IF) {
                advance_token(p);
                n.as_else_stmt->inside = parse_stmt(p);
                return n;
            }
            n.as_else_stmt->inside = parse_stmt_block(p);
            return n;
        //<while> ::= "while" (<expression>  | E) <control_flow_block>
        case TOK_KEYWORD_WHILE:
            n = new_ast_node(p, AST_while_stmt);
            advance_token(p);
            if (current_token(p).type == TOK_KEYWORD_DO) {
                advance_token(p);
                n.as_while_stmt->condition = NULL_AST;
                n.as_while_stmt->block = parse_stmt(p);
                return n;
            }
            if (current_token(p).type == TOK_OPEN_BRACE) {
                n.as_while_stmt->condition = NULL_AST;
                n.as_while_stmt->block = parse_stmt_block(p);
                return n;
            }
            n.as_while_stmt->condition = parse_expr(p);
            if (current_token(p).type == TOK_KEYWORD_DO) {
                advance_token(p);
                n.as_while_stmt->block = parse_stmt(p);
                return n;
            }
            if (current_token(p).type == TOK_OPEN_BRACE) {
                n.as_while_stmt->block = parse_stmt_block(p);
                return n;
            }
            error_at_parser(p, "expected do <stmt> or statement block");
        //<for_type_one> ::= "for" <simple_stmt> ";" <expression>  ";" (( <assignment> "," )* <assignment> ("," | E) | E) <control_flow_block>
        //<for_type_two> ::= "for" <identifier> (":" <type> | E) "in" <expression>  ("..<" | "..=")  <expression> <control_flow_block>
        case TOK_KEYWORD_FOR:
            // we need to look ahead here
            advance_token(p);
            if (peek_token(p, 1).type == TOK_COLON || peek_token(p, 1).type == TOK_KEYWORD_IN) {
                //<for_type_two> ::= "for" <identifier> (":" <type> | E) "in" <expression>  ("..<" | "..=") <expression> <control_flow_block>        
                general_warning("for-in loop detected! this code is unchecked.");
                n = new_ast_node(p, AST_for_in_stmt);
                n.as_for_in_stmt->base.start = &current_token(p);
                n.as_for_in_stmt->indexvar = parse_identifier(p);
                if (current_token(p).type == TOK_COLON) {
                    advance_token(p);
                    n.as_for_in_stmt->type = parse_unary_expr(p);
                }
                if (current_token(p).type != TOK_KEYWORD_IN) error_at_parser(p, "expected \"in\"");
                advance_token(p);
                n.as_for_in_stmt->from = parse_expr(p);
                if (current_token(p).type != TOK_RANGE_LESS && current_token(p).type != TOK_RANGE_EQ) error_at_parser(p, "expected ..< or ..=");
                n.as_for_in_stmt->is_inclusive = current_token(p).type == TOK_RANGE_EQ;
                advance_token(p);
                n.as_for_in_stmt->to = parse_expr(p);
                n.as_for_in_stmt->block = parse_cfs(p);
                n.as_for_in_stmt->base.end = &current_token(p);
                return n;
            }
            //<for_type_one> ::= "for" <simple_stmt> ";" <expression>  ";" (( <assignment> "," )* <assignment> ("," | E) | E) <control_flow_block>
            AST n = new_ast_node(p, AST_for_stmt);
            n.as_for_stmt->base.start = &current_token(p);
            if (current_token(p).type == TOK_KEYWORD_MUT || current_token(p).type == TOK_KEYWORD_LET) {
                //we have a decl!
                n.as_for_stmt->prelude = parse_decl_stmt(p);
            } else {
                //we have an expr? its assign OR expr, so if its an ident,
                //we look for a comma or equals sign. if either exist? assign. if neither? expr.
                if (current_token(p).type == TOK_IDENTIFIER) {
                    n.as_for_stmt->prelude = parse_stmt(p); //expr stmt goes in here! :)
                } else error_at_parser(p, "expected declaration, assignment or expression");
            }
            //we're now at expr parsing.
            //we've presumably skipped the semicolon here, evaluate this assumption
            n.as_for_stmt->condition = parse_expr(p);
            if (current_token(p).type != TOK_SEMICOLON) error_at_parser(p, "expected ;");
            advance_token(p);
            //we're at the assignment list! we need to capture until cur_tok = TOK_OPEN_BRACE or TOK_KEYWORD_DO
            da_init(&n.as_for_stmt->update, 1);
            while (current_token(p).type != TOK_OPEN_BRACE && current_token(p).type != TOK_KEYWORD_DO) {
                da_append(&n.as_for_stmt->update, parse_stmt(p));
                if (current_token(p).type == TOK_COMMA) advance_token(p);
            }
            n.as_for_stmt->block = parse_cfs(p);
            n.as_for_stmt->base.end = &current_token(p);
            return n;
        //<asm> ::= "asm" "(" (<asm_param> ",")* <asm_param> ("," | E) ")" 
        // "{" (<string> ",")* <string> ("," | E) "}" 
        case TOK_KEYWORD_ASM:
            //this is going to suck. bad.
            //<asm_param> ::= <identifier> ("->" | "<-" | "<->") <string> 
            general_warning("asm blocks have not yet been tested! beware, there be demons in they/them hills over their");
            n = new_ast_node(p, AST_asm_stmt);
            n.as_asm_stmt->base.start = &current_token(p);
            advance_token(p);
            da_init(&n.as_asm_stmt->params, 1);
            da_init(&n.as_asm_stmt->strs, 1);
            if (current_token(p).type != TOK_OPEN_PAREN) error_at_parser(p, "expected (");
            advance_token(p);
            while (current_token(p).type != TOK_CLOSE_PAREN) {
                //scan for asm param!
                AST param = new_ast_node(p, AST_asm_param);
                param.as_asm_param->base.start = &current_token(p);
                if (current_token(p).type != TOK_IDENTIFIER) error_at_parser(p, "expected identifier");
                param.as_asm_param->ident = parse_identifier(p);
                if (current_token(p).type != TOK_ARROW_LEFT && current_token(p).type != TOK_ARROW_RIGHT && current_token(p).type != TOK_ARROW_BIDIR) error_at_parser(p, "expected <- or -> or <->");
                param.as_asm_param->op = &current_token(p);
                advance_token(p);
                if (current_token(p).type != TOK_LITERAL_STRING) error_at_parser(p, "expected string");
                param.as_asm_param->reg = parse_atomic_expr_term(p); //less code dup!
                param.as_asm_param->base.start = &current_token(p);
                da_append(&n.as_asm_stmt->params, param);
                if (current_token(p).type == TOK_COMMA) advance_token(p);
            }
            advance_token(p);
            if (current_token(p).type != TOK_OPEN_BRACE) error_at_parser(p, "expected {");
            advance_token(p);
            while (current_token(p).type != TOK_CLOSE_BRACE) {
                da_append(&n.as_asm_stmt->strs, parse_atomic_expr_term(p));
                if (current_token(p).type == TOK_COMMA) advance_token(p);
            }
            n.as_asm_stmt->base.end = &current_token(p);
            advance_token(p);
            return n;
        //<stmt_block>
        case TOK_OPEN_BRACE:
            return parse_stmt_block(p);
        /*<switch> ::= "switch" <expression> "{" 
             ("case" (<expression> ",")* <expression> ("," | E))* ":" <stmt>+
             ("case" ":" <stmt>+ )* "}" */
        case TOK_KEYWORD_SWITCH:
            general_warning("HEY! we havent yet tested switch parsing. there be demons here");
            //TODO: cases might overflow with their base.ends?
            n = new_ast_node(p, AST_switch_stmt);
            n.as_switch_stmt->base.start = &current_token(p);
            advance_token(p);
            n.as_switch_stmt->expr = parse_expr(p);
            if (current_token(p).type != TOK_OPEN_BRACE) error_at_parser(p, "expected {");
            advance_token(p);
            if (current_token(p).type != TOK_KEYWORD_CASE) error_at_parser(p, "switch statements require at least one case");
            while (current_token(p).type != TOK_CLOSE_BRACE) {
                AST switch_case = new_ast_node(p, AST_case);
                switch_case.as_case->base.start = &current_token(p);
                da_init(&switch_case.as_case->matches, 1);
                advance_token(p);
                if (current_token(p).type != TOK_COLON) {
                    //we're in the match zone baybee
                    while (current_token(p).type != TOK_COLON) {
                        da_append(&switch_case.as_case->matches, parse_expr(p));
                        if (current_token(p).type == TOK_COMMA) advance_token(p);
                    }
                    //we're out of the match zone baybee
                }
                advance_token(p);

                AST stmt_block = new_ast_node(p, AST_stmt_block);
                stmt_block.as_stmt_block->base.start = &current_token(p);
                da_init(&stmt_block.as_stmt_block->stmts, 1);
                while (current_token(p).type != TOK_KEYWORD_CASE && current_token(p).type != TOK_CLOSE_BRACE) {
                    da_append(&stmt_block.as_stmt_block->stmts, parse_stmt(p));
                }
                stmt_block.as_stmt_block->base.end = &current_token(p);
                switch_case.as_case->block = stmt_block;
                switch_case.as_case->base.end = &current_token(p);
                da_append(&n.as_switch_stmt->cases, switch_case);
            }
            n.as_switch_stmt->base.end = &current_token(p);
            advance_token(p);
            return n;
        //<break> ::= "break" (<identifier> | E) ";" 
        case TOK_KEYWORD_BREAK:
            n = new_ast_node(p, AST_break_stmt);
            n.as_break_stmt->base.start = &current_token(p);
            advance_token(p);
            if (current_token(p).type != TOK_SEMICOLON) {
                n.as_break_stmt->label = parse_atomic_expr_term(p);
            }
            if (current_token(p).type != TOK_SEMICOLON) error_at_parser(p, "expected ;");
            n.as_break_stmt->base.end = &current_token(p);
            advance_token(p);
            return n;
        //<fallthrough> ::= "fallthrough" ";" 
        case TOK_KEYWORD_FALLTHROUGH:
            n = new_ast_node(p, AST_fallthrough_stmt);
            n.as_fallthrough_stmt->base.start = &current_token(p);
            advance_token(p);
            if (current_token(p).type != TOK_SEMICOLON) error_at_parser(p, "expected ;");
            n.as_fallthrough_stmt->base.end = &current_token(p);
            advance_token(p);
            return n;
        //<extern> ::= "extern" <stmt>
        case TOK_KEYWORD_EXTERN:
            n = new_ast_node(p, AST_extern_stmt);
            n.as_extern_stmt->base.start = &current_token(p);
            advance_token(p);
            n.as_extern_stmt->stmt = parse_stmt(p);
            n.as_extern_stmt->base.end = &current_token(p);
            return n;
        //<defer> ::= "defer" <stmt>
        case TOK_KEYWORD_DEFER:
            n = new_ast_node(p, AST_defer_stmt);
            n.as_defer_stmt->base.start = &current_token(p);
            advance_token(p);
            n.as_defer_stmt->stmt = parse_stmt(p);
            n.as_defer_stmt->base.end = &current_token(p);
            return n;
        //<continue> ::= "continue" (<identifier> | E) ";"
        case TOK_KEYWORD_CONTINUE:
            n = new_ast_node(p, AST_continue_stmt);
            n.as_continue_stmt->base.start = &current_token(p);
            advance_token(p);
            if (current_token(p).type != TOK_SEMICOLON) {
                n.as_continue_stmt->label = parse_atomic_expr_term(p);
            }
            if (current_token(p).type != TOK_SEMICOLON) error_at_parser(p, "expected ;");
            n.as_continue_stmt->base.end = &current_token(p);
            advance_token(p);
            return n;
        case TOK_SEMICOLON:
            n = new_ast_node(p, AST_empty_stmt);
            n.as_empty_stmt->tok = &current_token(p);
            n.as_empty_stmt->base.start = &current_token(p);
            n.as_empty_stmt->base.end = &current_token(p);
            advance_token(p);
            return n;
        default:
            token* curr_tok = &current_token(p);
            AST expr = parse_expr(p);
            if (is_null_AST(expr)) return NULL_AST;
            if (current_token(p).type == TOK_COMMA || verify_assign_op(p)) {
                //<assignment> ::= (<unary_expression> ",")* <unary_expression> <assign_op> (<expression> | "---")
                n = new_ast_node(p, AST_assign_stmt);
                n.as_assign_stmt->base.start = curr_tok;
                da_init(&n.as_assign_stmt->lhs, 1);
                da_append(&n.as_assign_stmt->lhs, expr);
                if (current_token(p).type == TOK_COMMA) advance_token(p);
                while (!verify_assign_op(p)) {
                    da_append(&n.as_assign_stmt->lhs, parse_unary_expr(p));
                    if (current_token(p).type == TOK_COMMA) advance_token(p);
                }
                n.as_assign_stmt->op = &current_token(p);
                advance_token(p);
                if (current_token(p).type != TOK_UNINIT) n.as_assign_stmt->rhs = parse_expr(p);
                else {
                    n.as_assign_stmt->rhs = NULL_AST;
                    advance_token(p);
                }
                if (current_token(p).type != TOK_SEMICOLON) error_at_parser(p, "expected ;");
                n.as_assign_stmt->base.end = &current_token(p);
                advance_token(p);
                return n;
            } 
            //<expression> ";"
            if (current_token(p).type != TOK_SEMICOLON) error_at_parser(p, "expected ;");
            advance_token(p);
            return expr;

    }
}

AST parse_cfs(parser* p) {
    AST n = new_ast_node(p, AST_stmt_block);
    n.as_stmt_block->base.start = &current_token(p);
    da_init(&n.as_stmt_block->stmts, 1);
    if (current_token(p).type == TOK_KEYWORD_DO) {
        da_append(&n.as_stmt_block->stmts, parse_stmt(p));
        n.as_stmt_block->base.end = &current_token(p);
        return n;
    }    
    n = parse_stmt_block(p);
    n.as_stmt_block->base.end = &current_token(p);
    return n;
}

int verify_assign_op(parser* p) {
    //<assign_op> ::= "+=" | "-=" | "*="  | "/=" | "%="  | "%%=" | "&=" | "|=" | "~|=" | "~=" | "<<=" | ">>=" | "="
    switch (current_token(p).type) {
        case TOK_ADD_EQUAL:
        case TOK_SUB_EQUAL:
        case TOK_MUL_EQUAL:
        case TOK_DIV_EQUAL:
        case TOK_MOD_EQUAL:
        case TOK_MOD_MOD_EQUAL:
        case TOK_AND_EQUAL:
        case TOK_OR_EQUAL:
        case TOK_NOR_EQUAL:
        case TOK_XOR_EQUAL:
        case TOK_LSHIFT_EQUAL:
        case TOK_RSHIFT_EQUAL:
        case TOK_EQUAL:
            return 1;
        default:
            return 0;
    }
}

AST parse_identifier(parser* p) {
    AST n = new_ast_node(p, AST_identifier);
    n.as_identifier->base.start = &current_token(p);
    n.as_identifier->tok = &current_token(p);
    n.as_identifier->base.end = &current_token(p);
    advance_token(p);
    return n;
}

AST parse_type(parser* p) {
    AST n = NULL_AST;
    switch (current_token(p).type) {
        //<identifier>
        case TOK_IDENTIFIER:
            return parse_identifier(p); 
        //"i8" | "i16" | "i32" | "i64" | "int" |
        //"u8" | "u16" | "u32" | "u64" | "uint" |
        //"f16" | "f32" | "f64" | "float" | "bool" |
        case TOK_TYPE_KEYWORD_INT:
        case TOK_TYPE_KEYWORD_I8:
        case TOK_TYPE_KEYWORD_I16:
        case TOK_TYPE_KEYWORD_I32:
        case TOK_TYPE_KEYWORD_I64:
        case TOK_TYPE_KEYWORD_UINT:
        case TOK_TYPE_KEYWORD_U8:
        case TOK_TYPE_KEYWORD_U16:
        case TOK_TYPE_KEYWORD_U32:
        case TOK_TYPE_KEYWORD_U64:
        case TOK_TYPE_KEYWORD_FLOAT:
        case TOK_TYPE_KEYWORD_F16:
        case TOK_TYPE_KEYWORD_F32:
        case TOK_TYPE_KEYWORD_F64:
        case TOK_TYPE_KEYWORD_BOOL:
            n = new_ast_node(p, AST_basic_type_expr);
            n.as_basic_type_expr->base.start = &current_token(p);
            n.as_basic_type_expr->lit = &current_token(p);
            n.as_basic_type_expr->base.end = &current_token(p);
            advance_token(p);
            return n;
        case TOK_KEYWORD_STRUCT:
        case TOK_KEYWORD_UNION:
            return parse_aggregate(p);
        case TOK_KEYWORD_ENUM:
            return parse_enum(p);
        case TOK_KEYWORD_FN:
            return parse_fn(p);
        case TOK_OPEN_BRACKET:
            //("^" | "[]") ("mut" | "let") ( <type> | E)
            advance_token(p);
            if (current_token(p).type != TOK_CLOSE_BRACKET) error_at_parser(p, "expected ]");
            n = new_ast_node(p, AST_slice_type_expr);
            n.as_slice_type_expr->base.start = &current_token(p);
        case TOK_CARET:
            if (is_null_AST(n)) n = new_ast_node(p, AST_pointer_type_expr);
            advance_token(p);
            if (current_token(p).type != TOK_KEYWORD_MUT && current_token(p).type != TOK_KEYWORD_LET) error_at_parser(p, "expected mut or let");
            n.as_pointer_type_expr->mutable = current_token(p).type == TOK_KEYWORD_MUT;
            advance_token(p);
            n.as_pointer_type_expr->subexpr = parse_type(p);
            n.as_pointer_type_expr->base.end = &current_token(p);
            return n;
    }
    return NULL_AST;
}

AST parse_atomic_expr(parser* p) {
    //this function handles explicitly atomic_expr that require left-assoc stuff.

/*<atomic_expression> ::= <literal> |  "." <identifier> | 
                        "(" <expression> ")" | <fn_literal> | <type> |
                        <type> "{" ((<expression> ",")* <expression> ("," | E) | E) "}" |
                        <atomic_expression> ("::" | "." | "->") <identifier> |
                        <atomic_expression> "[" <expression> "]" |
                        <atomic_expression> "[" (<expression> | E) ":" (<expression> | E) "]" |
                        <atomic_expression> "(" ((<expression> ",")* <expression> ("," | E) | E) ")" |
                        <atomic_expression> "^" */

    AST left = parse_atomic_expr_term(p);
    AST left_copy = NULL_AST;

    if (is_null_AST(left)) return left;

    while (current_token(p).type != TOK_EOF) {
        if (current_token(p).type == TOK_COLON_COLON || current_token(p).type == TOK_PERIOD || current_token(p).type == TOK_ARROW_RIGHT) {
            //<atomic_expression> ("::" | "." | "->") <identifier>
            if (current_token(p).type == TOK_PERIOD && peek_token(p, 1).type == TOK_OPEN_BRACE) {
                // compound literal of form type.{1, 2, 3}
                left_copy = left;
                left = new_ast_node(p, AST_comp_literal_expr);
                left.as_comp_literal_expr->type = left_copy;
                left.as_comp_literal_expr->base.start = left_copy.base->start;
                advance_token(p);
                advance_token(p);
                da_init(&left.as_comp_literal_expr->elems, 2);
                while (current_token(p).type != TOK_CLOSE_BRACKET) {
                    AST elem = parse_expr(p);
                    da_append(&left.as_comp_literal_expr->elems, elem);
                    if (current_token(p).type == TOK_COMMA) {
                        advance_token(p);
                        continue;
                    } else {
                        error_at_parser(p, "expected , or }");
                    }
                }
                left.as_comp_literal_expr->base.end = &current_token(p);
                continue;
            }
            left_copy = left;
            left = new_ast_node(p, AST_selector_expr);
            left.as_selector_expr->base.start = left_copy.base->start;
            left.as_selector_expr->lhs = left_copy;
            left.as_selector_expr->op = &current_token(p);
            advance_token(p);
            left.as_selector_expr->rhs = parse_identifier(p);
            left.as_selector_expr->base.end = &current_token(p);
            continue;
        }
        //<atomic_expression> "[" <expression> "]" |
        //<atomic_expression> "[" (<expression> | E) ":" (<expression> | E) "]" |
        if (current_token(p).type == TOK_OPEN_BRACKET) {
            token* start = &current_token(p);
            advance_token(p);
            AST expr = parse_expr(p);
            if (is_null_AST(expr) && current_token(p).type != TOK_CLOSE_BRACKET) error_at_parser(p, "expected : or ]");
            //<atomic_expression> "[" <expression> "]"
            if (current_token(p).type == TOK_CLOSE_BRACKET) {
                left_copy = left;
                left = new_ast_node(p, AST_index_expr);
                left.as_index_expr->base.start = left_copy.base->start;
                left.as_index_expr->lhs = left_copy;
                left.as_index_expr->inside = expr;
                left.as_index_expr->base.end = &current_token(p);
                advance_token(p);
                continue;
            }
            //<atomic_expression> "[" (<expression> | E) ":" (<expression> | E) "]"
            left_copy = left;
            left = new_ast_node(p, AST_slice_expr);
            left.as_slice_expr->base.start = left_copy.base->start;
            left.as_slice_expr->lhs = left_copy;
            left.as_slice_expr->inside_left = expr;
            if (current_token(p).type != TOK_COLON) error_at_parser(p, "expected :");
            advance_token(p);
            left.as_slice_expr->inside_right = parse_expr(p);
            if (current_token(p).type != TOK_CLOSE_BRACKET) error_at_parser(p, "expected ]");
            advance_token(p);
            continue;
        }
        //<atomic_expression> "(" ((<expression> ",")* <expression> | E) ")"
        if (current_token(p).type == TOK_OPEN_PAREN) {
            left_copy = left;
            left = new_ast_node(p, AST_call_expr);
            left.as_call_expr->lhs = left_copy;
            left.as_call_expr->base.start = left_copy.base->start;
            da_init(&left.as_call_expr->params, 1);
            advance_token(p);
            if (current_token(p).type == TOK_CLOSE_PAREN) {
                left.as_call_expr->base.end = &current_token(p);
                continue;
            }
            while (current_token(p).type != TOK_CLOSE_PAREN) {
                da_append(&left.as_call_expr->params, parse_expr(p));
                if (current_token(p).type == TOK_COMMA) advance_token(p);
            }
            left.as_call_expr->base.end = &current_token(p);
            advance_token(p);
            continue;
        }
        //<atomic_expression> "^"
        if (current_token(p).type == TOK_CARET) {
            left_copy = left;
            left = new_ast_node(p, AST_unary_op_expr);
            left.as_unary_op_expr->op = &current_token(p);
            left.as_unary_op_expr->inside = left_copy;
            left.as_unary_op_expr->base.start = left_copy.base->start;
            left.as_unary_op_expr->base.end = &current_token(p);
            advance_token(p);
            continue;
        } 
        return left;
    }
    return left;
}

AST parse_stmt_block(parser* p) {
    //<stmt_block> ::=  "{" <stmt>* "}"
    AST n = new_ast_node(p, AST_stmt_block); 
    da_init(&n.as_stmt_block->stmts, 1);

    if (current_token(p).type != TOK_OPEN_BRACE) error_at_parser(p, "expected {");

    advance_token(p);
    while (current_token(p).type != TOK_CLOSE_BRACE) {
        AST stmt = parse_stmt(p);
        if (is_null_AST(stmt)) break;
        da_append(&n.as_stmt_block->stmts, stmt);
    }
    advance_token(p);
    return n;
}

AST parse_atomic_expr_term(parser* p) {
    //this function is for <atomic_expression> bnf leafs with terminals explicitly in them
    //not left-assoc, basically
    /*<atomic_expression_terminals> ::= <type> | <literal> | <identifier> | "." <identifier> | 
                                        <fn_literal> | "(" <expression> ")" | 
                                        <type> "{" ((<expression> ",")* <expression> ("," | E) | E) "}" |*/

    AST n;

    n = parse_type(p);
    if (!is_null_AST(n)) {
        //we MIGHT be in a compound literal
        if (current_token(p).type == TOK_OPEN_BRACE) {
            AST lit = new_ast_node(p, AST_comp_literal_expr);
            lit.as_comp_literal_expr->type = n;
            lit.as_comp_literal_expr->base.start = n.base->start;
            da_init(&lit.as_comp_literal_expr->elems, 1);
            advance_token(p);
            if (current_token(p).type == TOK_CLOSE_BRACKET) {
                lit.as_comp_literal_expr->base.end = &current_token(p);
                return lit;
            }
            while (current_token(p).type != TOK_CLOSE_BRACKET) {
                da_append(&lit.as_comp_literal_expr->elems, parse_expr(p));
                if (current_token(p).type == TOK_COMMA) advance_token(p);
            }
            lit.as_comp_literal_expr->base.end = &current_token(p);
            advance_token(p);
            return lit;
        }
        return n;
    }
    switch (current_token(p).type) {
        //<literal>
        case TOK_LITERAL_INT:
        case TOK_LITERAL_FLOAT:
        case TOK_LITERAL_BOOL:
        case TOK_LITERAL_STRING:
        case TOK_LITERAL_CHAR:
        case TOK_LITERAL_NULL:
            n = new_ast_node(p, AST_literal_expr);
            n.as_literal_expr->base.start = &current_token(p);
            n.as_literal_expr->tok = &current_token(p);
            n.as_literal_expr->base.end = &current_token(p);
            advance_token(p);
            return n;
        // "." <identifier> enum selector! this is for the semanal
        case TOK_PERIOD:
            n = new_ast_node(p, AST_selector_expr);
            n.as_selector_expr->base.start = &current_token(p);
            n.as_selector_expr->op = &current_token(p);
            advance_token(p);
            n.as_selector_expr->lhs = NULL_AST;
            n.as_selector_expr->rhs = parse_identifier(p);
            n.as_identifier->base.end = &current_token(p);
            advance_token(p);
            return n;            
        //fn lit or fn ptr. who knows?
        case TOK_KEYWORD_FN:
            return parse_fn(p);
        case TOK_OPEN_PAREN:
            advance_token(p);
            n = parse_expr(p);
            if (current_token(p).type != TOK_CLOSE_PAREN) error_at_parser(p, "expected )");
            advance_token(p);
            return n;
    }
    return NULL_AST;
}

AST parse_aggregate(parser* p) {
    //<aggregate> ::= ("struct" | "union")  "{" <param_list> "}" ";" 
    AST n = new_ast_node(p, AST_struct_type_expr);
    n.as_struct_type_expr->base.start = &current_token(p);
    n.as_struct_type_expr->is_union = current_token(p).type == TOK_KEYWORD_UNION;
    da_init(&n.as_struct_type_expr->fields, 1);
    advance_token(p);
    if (current_token(p).type != TOK_OPEN_BRACE) error_at_parser(p, "expected {");
    advance_token(p);
    if (current_token(p).type != TOK_CLOSE_PAREN) { 
        /*        <param_list> ::= <param_list> "," <param> | 
                         <param_list> "," <multi_param> | 
                         <param> | <multi_param>

        */
        for (int i = p->current_tok; i < p->tokens.len; i++) {
            if (current_token(p).type == TOK_COLON) error_at_parser(p, "unexpected :");
            if (current_token(p).type == TOK_COMMA) advance_token(p);
            if (current_token(p).type == TOK_CLOSE_PAREN) break;
            if (current_token(p).type == TOK_IDENTIFIER) {
                if (peek_token(p, 1).type == TOK_COLON) {
                    //<param> ::= <identifier> ":" <type>
                    AST_typed_field curr_field = {0};
                    AST field = parse_identifier(p);
                    advance_token(p);
                    da_append(&n.as_struct_type_expr->fields, ((AST_typed_field){.field = field, .type = parse_type(p)}));
                    continue;
                }
                if (peek_token(p, 1).type == TOK_COMMA) { 
                    //<multi_param> ::= (<identifier>  ",")+ <identifier> ":" <type> 
                    AST_typed_field curr_field;
                    curr_field.field = parse_identifier(p);
                    curr_field.type.type = 0;
                    da_append(&n.as_struct_type_expr->fields, curr_field);
                    advance_token(p);
                    continue;
                }
            }
            error_at_parser(p, "unexpected");
        }
    }
    advance_token(p);
    if (current_token(p).type == TOK_SEMICOLON) error_at_parser(p, "expected ;");
    n.as_struct_type_expr->base.end = &current_token(p);
    advance_token(p);
    return n;
}
